Update README and init